--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,30 @@
 @charset "UTF-8";
 
-.login_container {
-    max-width: 40%;
-    margin: 200px auto;
+
+html, body, .container-fluid, .mainRow {
+    height: 100%;
 }
 
-form {
-    text-align: center;
+.sidebar {
+    background-color: #eee;
+    box-shadow: 3px 0px 5px #333;
 }
 
-a {
-    color: black;
-    text-decoration: none;
-    padding-left: 10px;
-    padding-right: 10px;
+#user_container div.card {
+    background-color: #eee;
+    box-shadow: 0px 0px 5px #333;
+    border-radius: 10px;
 }
 
-i {
-    font-size: 30px;
+#banner {
+    background: linear-gradient(to right, #426399, #200BA3);
+    height: 150px;
+    padding: 10px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
-#registration_buttons {
-    text-align: center;
-}
-
-#menu_buttons {
-    text-align: center;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: black;
-}
-
-li a {
-    display: block;
-    color: #898989;
-    padding: 8px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-li a:hover {
-    color: white;
+#banner .card {
+    margin-right: 15px;
 }
