--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,119 @@
-@charset "UTF-8";
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
-
-html, body, .container-fluid, .mainRow {
-    height: 100%;
+body {
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(rgb(65, 65, 65), black) fixed;
 }
 
-.sidebar {
-    background-color: #eee;
-    box-shadow: 3px 0px 5px #333;
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
 }
 
-#user_container div.card {
-    background-color: #eee;
-    box-shadow: 0px 0px 5px #333;
-    border-radius: 10px;
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
 }
 
-#banner {
-    background: linear-gradient(to right, #426399, #200BA3);
-    height: 150px;
+#sidebar {
+    background: black;
+    color: rgb(74 74 74);
+    transition: all 0.3s;
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: black;
+}
+
+#sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid rgb(74 74 74);
+}
+
+#sidebar ul li a {
     padding: 10px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    font-size: 1.1em;
+    display: block;
 }
 
-#banner .card {
-    margin-right: 15px;
+#sidebar ul li a:hover {
+    color: #fff;
 }
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+    color: #fff;
+}
+
+#content {
+    margin-top: -950px;
+    margin-left: 350px;
+    transition: margin-left .5s;
+    padding: 20px;
+}
+
+.openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #111;
+    color: white;
+    padding: 10px 15px;
+    border-style: solid;
+    border-color: rgb(74 74 74);
+}
+
+.openbtn:hover {
+    color: white;
+    border-color: white;
+    box-shadow: black;
+    font-size: 25px;
+    transition: 0.3s;
+}
+
+.closebtn {
+    font-size: 30px;
+    padding-left: 210px;
+    padding-top: 50px;
+}
+
+.closebtn:hover {
+    font-size: 40px;
+    color: white;
+}
+
+.logoutbtn {
+    font-size: 20px;
+    background: black;
+    color: rgb(74 74 74);
+    transition: all 0.3s;
+}
+
+.wrapper {
+    display: flex;
+    align-items: stretch;
+    width: 0;
+}
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    min-height: 100vh;
+}
+
+/* @media (max-width: 768px) {
+    .sidebar {
+        padding-top: 200px;
+    }
+    .sidebar.active {
+        font-size: 18px;
+    }
+} */
