--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,10 @@ a, a:hover, a:focus {
     background: black;
 }
 
-#sidebar ul.components {
-    padding: 20px 0;
-    border-bottom: 1px solid rgb(74 74 74);
+#sidebar .logoutbtn {
+    border-top: 1px solid rgb(74 74 74);
 }
+
 
 #sidebar ul li a {
     padding: 10px;
@@ -57,7 +57,7 @@ a, a:hover, a:focus {
 #content {
     margin-top: -950px;
     margin-left: 0px;
-    transition: margin-left .5s;
+    transition: .5s;
     padding: 20px;
 }
 
@@ -96,10 +96,40 @@ a, a:hover, a:focus {
     color: rgb(74 74 74);
     transition: all 0.3s;
 }
+#dropdown {
+    margin-top: -95px;
+    margin-left: 150vh;
+    padding: 20px;
+}
 
-#wrapper {
+.userbtn {
+    width: 35vh;
+    font-size: 20px;
+    background-color: #111;
+    color: white;
+    border-style: solid;
+    border-radius: 10px;
+    border-color: rgb(74 74 74);
+    padding: 5px;
+}
+
+.userbtn:hover {
+    background-color: rgb(30 30 30);
+    color: white;
+    border-color: white;
+    box-shadow: black;
+    transition: 0.3s;
+}
+
+.wrapper {
     min-width: 250px;
     max-width: 250px;
+}
+
+
+#userbar {
+    min-width: 300px;
+    max-width: 300px;
 }
 
 #sidebar {
@@ -115,4 +145,9 @@ a, a:hover, a:focus {
     .sidebar.active {
         font-size: 18px;
     }
+}
+
+/* Font Awesome Icon settings*/
+.fa-user-circle {
+    font-size: 40px;;
 }
