--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ a, a:hover, a:focus {
 }
 
 #content {
-    margin-top: -950px;
+    margin-top: -100vh;
     margin-left: 0px;
     transition: .5s;
     padding: 20px;
@@ -152,6 +152,10 @@ a, a:hover, a:focus {
     }
     .sidebar.active {
         font-size: 18px;
+    }
+
+    #dropdown {
+        margin-left: auto;
     }
 }
 
