--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(rgb(65, 65, 65), black) fixed;
+    background: linear-gradient(#de6262, #ffb88c) fixed;
 }
 
 p {
@@ -13,63 +13,17 @@ p {
     color: #999;
 }
 
-a, a:hover, a:focus {
-    color: inherit;
-    text-decoration: none;
+#sidebar ul li a , .logoutbtn a{
+    color: black;
     transition: all 0.3s;
 }
 
-.wrapper {
-    min-width: 250px;
-    max-width: 250px;
-}
-
-#sidebar {
-    margin-left: -250px;
-    max-width: 250px;
-    min-height: 100vh;
-}
-
-#sidebar {
-    background: black;
-    color: rgb(74 74 74);
-    transition: all 0.3s;
-}
-
-#sidebar .sidebar-header {
-    padding: 20px;
-    background: black;
-}
-
-#sidebar .logoutbtn {
-    border-top: 1px solid rgb(74 74 74);
-}
-
-
-#sidebar ul li a {
-    padding: 10px;
-    font-size: 1.1em;
-    display: block;
-}
-
-#sidebar ul li a:hover {
+#sidebar ul li a:hover, .logoutbtn a:hover{
     color: #fff;
 }
 
-#sidebar ul p {
-    color: #fff;
-    padding: 10px;
-}
-
-#sidebar ul li.active > a, a[aria-expanded="true"] {
-    color: #fff;
-}
-
-#content {
-    margin-top: -100vh;
-    margin-left: 0px;
-    transition: .5s;
-    padding: 20px;
+.logoutbtn {
+    margin-top: 50vh;
 }
 
 .openbtn {
@@ -90,74 +44,36 @@ a, a:hover, a:focus {
     transition: 0.3s;
 }
 
-.closebtn {
-    font-size: 30px;
-    padding-left: 210px;
-    padding-top: 50px;
+#bannerimg {
+    max-width: 100%;
+    padding: 10px 0px 0px;
+    size: 20%;
 }
 
-.closebtn:hover {
-    font-size: 40px;
-    color: white;
-}
-
-.logoutbtn {
-    font-size: 20px;
-    background: black;
-    color: rgb(74 74 74);
-    transition: all 0.3s;
-}
-
-#dropdown {
-    margin-top: -95px;
-    margin-left: 150vh;
-    padding: 20px;
-}
-
-.userbtn {
-    width: 35vh;
-    font-size: 20px;
+.btn-secondary {
+    background-color: transparent;
+    border-style: none;
+    font-size: 25px;
     background-color: #111;
     color: white;
     border-style: solid;
     border-radius: 10px;
     border-color: rgb(74 74 74);
-    padding: 5px;
 }
 
-.userbtn:hover {
+.btn-secondary:hover {
+    background-color: transparent;
     background-color: rgb(30 30 30);
-    color: white;
+    font-size: 30px;
     border-color: white;
     box-shadow: black;
     transition: 0.3s;
 }
 
-#greeting {
-    min-width: 400px;
-    max-width: 400px;
-    margin-left: 300px;
-    margin-top: -20px;
-}
-
-.greetingtxt {
+.greetingtstxt {
     font-size: 50px;
     color: white;
     font-family: 'Poppins', sans-serif;
-}
-
- /* Media queries */
-@media (max-width: 786px) {
-    .sidebar {
-        padding-top: 200px;
-    }
-    .sidebar.active {
-        font-size: 18px;
-    }
-
-    #dropdown {
-        margin-left: auto;
-    }
 }
 
 /* Font Awesome Icon settings*/
